[gd_scene load_steps=11 format=2]

[ext_resource path="res://hud/LifeBarMiniProgress.png" type="Texture" id=1]
[ext_resource path="res://hud/LifeBarMiniUnder.png" type="Texture" id=2]
[ext_resource path="res://scenes/actor/sprite/Shadow.png" type="Texture" id=4]
[ext_resource path="res://scenes/actor/monster/Monster.gd" type="Script" id=5]
[ext_resource path="res://scenes/actor/monster/SndDeath.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/actor/movement/RandomMoveBehavior.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 5, 3 )

[sub_resource type="SpriteFrames" id=17]
resource_local_to_scene = true
animations = [ {
"frames": [  ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 6, 8 )

[sub_resource type="CircleShape2D" id=20]
radius = 300.0

[node name="Monster" type="KinematicBody2D" groups=["monsters"]]
collision_layer = 2
collision_mask = 128
script = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Shadow" type="Sprite" parent="Pivot"]
texture = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 0, -7 )
frames = SubResource( 17 )
animation = "Right"

[node name="LifeBar" type="TextureProgress" parent="Pivot"]
light_mask = 0
margin_left = -9.0
margin_top = -23.0
margin_right = 9.0
margin_bottom = -19.0
max_value = 6.0
value = 6.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="AreaHitBox" type="Area2D" parent="."]
collision_layer = 16

[node name="Shape" type="CollisionShape2D" parent="AreaHitBox"]
position = Vector2( 0, -5 )
shape = SubResource( 19 )

[node name="Tween" type="Tween" parent="."]

[node name="SndHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -24.0

[node name="RandomMoveBehavior" parent="." instance=ExtResource( 7 )]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -5 )

[node name="Sight" type="Area2D" parent="."]
visible = false
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 20 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="AreaHitBox" to="." method="_on_AreaHitBox_body_entered"]
[connection signal="axis_changed" from="RandomMoveBehavior" to="." method="_on_axis_changed"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="RandomMoveBehavior" method="set_disabled" binds= [ false ]]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="RandomMoveBehavior" method="set_disabled" binds= [ true ]]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
